--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,34 +1,25 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
-    signingConfigs {
-        debug {
-            storeFile file('debug.jks')
-            storePassword '123456'
-            keyAlias 'debug'
-            keyPassword '123456'
-        }
-    }
     namespace 'com.winlator'
     compileSdk 34
 
     defaultConfig {
-        applicationId 'com.winlator'
         minSdkVersion 26
         targetSdkVersion 28
         versionCode 16
         versionName "7.1"
-        /*fluidsynth要用到这个so*/externalNativeBuild.cmake.arguments '-DANDROID_STL=c++_shared'
+        externalNativeBuild.cmake.arguments '-DANDROID_STL=c++_shared'
     }
 
     buildTypes {
         debug {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
 
-            ndk {
-                abiFilters 'arm64-v8a', 'armeabi-v7a'
-            }
+        ndk {
+            abiFilters 'arm64-v8a'
         }
     }
 
