--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.winlator">
-    <uses-feature
-        android:glEsVersion="0x00020000"
-        android:required="true" />
-    <uses-feature
-        android:name="android.hardware.vr.headtracking"
-        android:required="false" />
-    <uses-feature
-        android:name="com.oculus.feature.PASSTHROUGH"
-        android:required="false" />
-    <uses-feature
-        android:name="oculus.software.overlay_keyboard"
-        android:required="false" />
+
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature android:name="android.hardware.vr.headtracking" android:required="false" />
+    <uses-feature android:name="com.oculus.feature.PASSTHROUGH" android:required="false" />
+    <uses-feature android:name="oculus.software.overlay_keyboard" android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -19,76 +12,51 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-<!--    管理所有文件 可以访问外部存储设备-->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
 
-    <!--    自定义application以全局捕捉异常-->
-    <application
-        android:name="com.ewt45.winlator.ExtraFeatures$MyApplication"
-        android:icon="@mipmap/ic_launcher"
-        android:appCategory="game"
-        android:isGame="true"
-        android:extractNativeLibs="true"
-        android:allowAudioPlaybackCapture="true"
-        android:label="@string/app_name">
+    <!-- Define activities that are part of the library -->
+    <activity android:name="com.winlator.MainActivity"
+        android:theme="@style/AppTheme"
+        android:exported="true"
+        android:screenOrientation="sensor"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|density|navigation">
+    </activity>
 
-        <activity android:name="com.winlator.MainActivity"
-            android:theme="@style/AppTheme"
-            android:exported="true"
-            android:screenOrientation="sensor"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|density|navigation">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+    <activity android:name="com.winlator.XServerDisplayActivity"
+        android:exported="false"
+        android:theme="@style/AppThemeFullscreen"
+        android:launchMode="singleTask"
+        android:supportsPictureInPicture="true"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|density|navigation"
+        android:screenOrientation="sensorLandscape" />
 
-        <!--        添加画中画支持-->
-        <activity android:name="com.winlator.XServerDisplayActivity"
-            android:exported="false"
-            android:theme="@style/AppThemeFullscreen"
-            android:launchMode="singleTask"
-            android:supportsPictureInPicture="true"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|density|navigation"
-            android:screenOrientation="sensorLandscape" />
+    <activity android:name="com.winlator.XrActivity"
+        android:configChanges="density|orientation|screenSize|keyboard|keyboardHidden|uiMode"
+        android:exported="true"
+        android:launchMode="singleTask"
+        android:resizeableActivity="false"
+        android:screenOrientation="landscape"
+        android:process=":vr_process"
+        android:theme="@style/AppThemeFullscreen" />
 
-        <activity
-            android:name="com.winlator.XrActivity"
-            android:configChanges="density|orientation|screenSize|keyboard|keyboardHidden|uiMode"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:resizeableActivity="false"
-            android:screenOrientation="landscape"
-            android:process=":vr_process"
-            android:theme="@style/AppThemeFullscreen">
-            <intent-filter>
-                <category android:name="com.oculus.intent.category.VR" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+    <activity android:name="com.winlator.ControlsEditorActivity"
+        android:exported="false"
+        android:theme="@style/AppThemeFullscreen"
+        android:screenOrientation="sensor" />
 
-        <!--            编辑控件时允许竖屏显示-->
-        <activity android:name="com.winlator.ControlsEditorActivity"
-            android:exported="false"
-            android:theme="@style/AppThemeFullscreen"
-            android:screenOrientation="sensor" />
+    <activity android:name="com.winlator.ExternalControllerBindingsActivity"
+        android:theme="@style/AppTheme"
+        android:exported="false"
+        android:screenOrientation="sensor" />
 
-        <activity android:name="com.winlator.ExternalControllerBindingsActivity"
-            android:theme="@style/AppTheme"
-            android:exported="false"
-            android:screenOrientation="sensor" />
+    <provider android:name="bin.mt.file.content.MTDataFilesProvider"
+        android:permission="android.permission.MANAGE_DOCUMENTS"
+        android:exported="true"
+        android:authorities="com.winlator.MTDataFilesProvider"
+        android:grantUriPermissions="true">
+        <intent-filter>
+            <action android:name="android.content.action.DOCUMENTS_PROVIDER" />
+        </intent-filter>
+    </provider>
 
-<!--        mt的文件提供器-->
-        <provider
-            android:name="bin.mt.file.content.MTDataFilesProvider"
-            android:permission="android.permission.MANAGE_DOCUMENTS"
-            android:exported="true"
-            android:authorities="com.winlator.MTDataFilesProvider"
-            android:grantUriPermissions="true">
-            <intent-filter>
-                <action
-                    android:name="android.content.action.DOCUMENTS_PROVIDER" />
-            </intent-filter>
-        </provider>
-    </application>
 </manifest>
